--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@turf/boolean-point-in-polygon": "^7.2.0",
 		"d3": "^7.9.0",
 		"mapbox-gl": "^3.11.0"
 	}
