--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"@turf/boolean-point-in-polygon": "^7.2.0",
 		"d3": "^7.9.0",
-		"mapbox-gl": "^3.11.0"
+		"mapbox-gl": "^3.11.0",
+		"turf": "^3.0.14"
 	}
 }
