--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@turf/boolean-point-in-polygon": "^7.2.0",
 		"d3": "^7.9.0",
 		"mapbox-gl": "^3.11.0",
+		"svelte-scrolly": "^0.0.4",
 		"turf": "^3.0.14"
 	}
 }
